--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-friends",
+  "name": "creatify-2.0",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -17,6 +17,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "@apollo/client": "^3.7.15",
+    "jwt-decode": "^3.1.2",
+    "lodash.debounce": "^4.0.8",
+    "react-router-dom": "^6.12.0",
+    "sass": "^1.62.1"
   }
 }
